--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
             /wait-for-it.sh db:5432 -- 
             python manage.py wait_for_db &&
             python manage.py migrate &&
-            python manage.py runserver 0.0.0.0:8000"
+            gunicorn medigenie.wsgi:application --bind 0.0.0.0:8000"
     depends_on:
       - db
     env_file:
