--- a/requirements-core.txt
+++ b/requirements-core.txt
@@ -31,6 +31,11 @@ whitenoise
 google-generativeai  
 tiktoken              
 langchain 
+langgraph
+langchain-groq
+langchain-tavily
+arxiv
+wikipedia
 langchain-huggingface           
 langchain-community
 sentence-transformers
