--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,10 +27,11 @@ services:
       - "443:443"
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./ssl:/etc/ssl/medigenie
+      - /etc/letsencrypt/live/api.medigenie.hashkoders.com:/etc/ssl/medigenie:ro
     depends_on:
       - app
     restart: unless-stopped
+
 
 volumes:
   prod-db-data:
